# krux-file-signer

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: black.yml  build.yml  ci.yml  lint.yml  pylint.yml
inst/: fontawesome.py  kbuilder.py
src/: callbacks.py  constants.py  fa-regular-6.4.2.fontd  filechooser.py  hashutils.py  krux-file-signer.py  krux_file_signer.py  ksigner-cli.py  ksigner-gui.py  ksigner.kv  ksigner.py  ksignerGUI.py  loggedapp.py  logutils.py  mainscreen.py  pemutils.py  processingutils.py  qrcode_widget.kv  qrcodescreen.py  qrutils.py  signandverifyutils.py  signscreen.py  verifyscreen.py  videoutils.py
src/cli/: actioner.py  getsome.py  on.py  scanner.py  signer.py  verifyer.py
src/screens/: actioner.py  cacher.py  logscreen.py  main.py  qrcode.py  scan.py  sign.py  verify.py
src/utils/: constants.py  filechooser.py  hash.py  info.py  klogger.py  log.py  pem.py  qr.py  signandverify.py  video.py
