[tool.poetry]
name = "krux-file-signer"
version = "0.0.1"
description = "A python script to sign files and verify signatures in a airgapped manner"
authors = [
  "odudex <eduardo.schoenknecht@gmail.com>",
  "qlrd <qlrddev@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.11.7"
qrcode = "^7.4.2"
pillow = "^10.2.0"
kivy = "^2.2.1"
zbarcam = "^2020.524"
kivysome = "^0.2.1"
pyopenssl = "^23.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pylint = "^3.0.3"
pyinstaller = "^6.3.0"
poethepoet = "^0.24.4"

[tool.poe.tasks]
dev-gui = "python src/ksigner-gui.py"
dev-cli = "python src/ksigner-cli.py"
black-src = "black src"
black-inst = "black inst/"
black = ["black-src", "black-inst"]
lint-src = "pylint src/"
lint-inst = "pylint inst/"
lint = ["lint-src", "lint-inst"]
build-cli = "python inst/kbuilder.py cli"
build-gui = "python inst/kbuilder.py gui"
build-font = "python inst/fontawesome.py"
build = ["build-cli", "build-gui"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
