[project]
name = "krux-file-signer"
version = "0.0.1"
description = "A python script to sign files and verify signatures in a airgapped manner"
authors = [
  {name = "odudex", email = "eduardo.schoenknecht@gmail.com"},
  {name = "qlrddev", email = "qlrddev@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "opencv-python (>=4.8.0.76,<5.0.0)",
  "qrcode (>=8.0,<9.0)",
]

[tool.poetry]
# This repo is a set of standalone scripts under src/, not an installable
# package, so Poetry is used for dependency management only.
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.0"
pylint = "^4.0"
